--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ border-radius: 25%;
 }
 .project img{
     width: 300px;
-    height: 300px;
+    height: auto;
     margin: 10px;
     border: 2px solid rgb(126, 14, 201); 
     display: block;
